frontend: fix words breaking on mobile

--- a/frontend/global/scss/templates/_base.scss
+++ b/frontend/global/scss/templates/_base.scss
@@ -2,6 +2,8 @@
 
 
 .main-column {
+    word-break: break-word;
+    
     @include media-breakpoint-up(xs) {
         margin-bottom: $grid-gutter-width;
     }
